--- a/tarea4/styles.scss
+++ b/tarea4/styles.scss
@@ -8,12 +8,22 @@
     background-color: #BBB;
 }
 
+h1 {
+    text-align: center;
+    margin: 1rem 0;
+}
+
 img {
     max-width: 100%;
 }
 
 h2 {
     text-transform: uppercase;
+    text-align: center;
+}
+
+p {
+    text-align: center;
 }
 
 span {
@@ -28,5 +38,18 @@ main {
 }
 
 article {
-    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    @include dispositivo($tablet) {
+
+    }
+    @include dispositivo($escritorio) {
+
+    }
+}
+
+button {
+    @include boton() {
+        
+    }
 }
