--- a/tarea4/_variables.scss
+++ b/tarea4/_variables.scss
@@ -1,10 +1,15 @@
 // ancho tablet y escritorio
 
-$tablet: 768px;
-$escritorio: 1100px;
+$tablet: 480px;
+$escritorio: 780px;
 
 /* Colores de fecha y nombre*/
 $colorEtiqueta: #C44;
 
 // BOTON
-$colorFondoBoton: rgb(80, 138, 224);
+$color-boton: rgb(80, 138, 224);
+$color-boton-hover: rgb(34, 61, 101);
+
+// ARTICULOS
+$anchoTarjetaTablet: calc(100%/2 - 1rem);
+$anchoTarjetaDesk: calc(100%/3 - 2rem);
