--- a/tarea4/_mixins.scss
+++ b/tarea4/_mixins.scss
@@ -10,8 +10,11 @@
 
 }
 
-@mixin boton() {
-    background-color: $colorFondoBoton;
-    color: aliceblue;
-    margin: 1rem;
+@mixin boton($colorFondo:$color-boton, $colorFondoHover:$color-boton-hover, $colorLetra:#DDD, $pad:8px) {
+    background-color: $colorFondo;
+    color: $colorLetra;
+    padding: $pad;
+    &:hover {
+        background-color: $colorFondoHover;
+    }
 }
