--- a/tarea4/styles.scss
+++ b/tarea4/styles.scss
@@ -1,11 +1,19 @@
-@import '_mixins.scss';
-@import '_variables.scss';
+@import 'variables.scss';
+@import 'mixins.scss';
 
 * {
     margin: 0;
     padding: 0;
     border: 0;
+}
+
+body {
     background-color: #BBB;
+}
+
+.contenedor {
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -17,7 +25,7 @@ img {
     max-width: 100%;
 }
 
-h2 {
+h3 {
     text-transform: uppercase;
     text-align: center;
 }
@@ -33,23 +41,29 @@ span {
 main {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: space-between;
-}
-
-article {
-    display: flex;
-    flex-direction: column;
     @include dispositivo($tablet) {
-
+        flex-direction: row;
+        flex-wrap: wrap;
     }
     @include dispositivo($escritorio) {
 
     }
 }
 
-button {
-    @include boton() {
-        
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FFF;
+    @include dispositivo($tablet) {
+        flex-basis: $anchoTarjetaTablet;
     }
+    @include dispositivo($escritorio) {
+        flex-basis: $anchoTarjetaDesk;
+    }
+}
+
+button {
+    @include boton();
 }
