--- a/tarea4/_mixins.scss
+++ b/tarea4/_mixins.scss
@@ -10,10 +10,11 @@
 
 }
 
-@mixin boton($colorFondo:$color-boton, $colorFondoHover:$color-boton-hover, $colorLetra:#DDD, $pad:8px) {
+@mixin boton($colorFondo:$color-boton, $colorFondoHover:$color-boton-hover, $colorLetra:#DDD, $pad:8px, $mb:10px) {
     background-color: $colorFondo;
     color: $colorLetra;
     padding: $pad;
+    margin-bottom: $mb;
     &:hover {
         background-color: $colorFondoHover;
     }
