--- a/tarea5/styles.scss
+++ b/tarea5/styles.scss
@@ -13,12 +13,9 @@
 }
 
 nav {
-
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 1rem 0;
-
-    @include flexBetween();
-    
 }
 
 .fondo-contenedor-buscador {
@@ -26,14 +23,43 @@ nav {
     background-image: url('../../img/hero.jpg');
     background-size: cover;
     background-position: center;
-    min-height: 300px; // prueba con cualquier valor  
+    height: 400px;
     
     .cont-column {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-    }
 
+        h1 {
+            color: #EEE;
+        }
+
+        p {
+            color: #EEE;
+        }
+
+        form {
+
+            display: flex;
+            flex-direction: row;
+            
+
+            input {
+                flex: 1 0 auto;
+                padding: 5px 0;
+                background-color: #EEE
+            }
+
+            button {
+                
+                flex: 1 0 auto;
+                padding: 5px;
+                background-color: #EEE
+
+
+            }
+        }
+    }
 }
 
 .fondo-contenedor-info {
@@ -41,19 +67,20 @@ nav {
     background: linear-gradient(to right, #49245a, #c0364f);
 
     div:first-child {
-        @include flexGrowHijo();
+        display: flex;
+        flex-direction: column;
     }
 
     .info {
 
         flex-grow: 1;
-
-        @include flexBetween();
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
         .flexP {
-
-            @include flexColum();
-
+            display: flex;
+            flex-direction: column;
         }
 
     }
