--- a/Tarea2-Grid/style.scss
+++ b/Tarea2-Grid/style.scss
@@ -1,3 +1,18 @@
 @import url(_mixins.scss);
 @import url(_variables.scss);
 
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+.contenedor {
+    max-width: 1100px;
+}
+
+header {
+
+    
+
+}
