--- a/Tarea2-Grid/style.scss
+++ b/Tarea2-Grid/style.scss
@@ -21,7 +21,6 @@ header {
 
     nav {
         background-color: black;
-        padding: 5px 0;
         .menu {
             display: grid;
             grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
@@ -41,83 +40,138 @@ header {
                     color: #EFEFEF;
                     text-align: center;
                     display: block;
+                    padding: 5px 0;
                 }   
             }
         }
+    }
+
+    .pizzaImg {
+        max-width: 100%;
     }
 }
 
 main {
 
+    display: grid;
+    grid-template-columns: 1fr;
+
     @include dispositivos($tablet) {
-
-        display: grid;
-        grid-template-columns: 1fr;
-
         grid-template-columns:minmax(10px, max-content) auto minmax(100px, max-content);
         grid-template-rows: repeat(4, auto);
-
-        .pizzaImg {
-            grid-column: 1 / 4;
-            grid-row: 1 / 2;
-            max-width: 100%;
-        }
-
-        .chil-requisitos {
-            grid-column: 1 / 2;
-            grid-row: 3 / 4;
-        }
-
-        .chil-img1 {
-            grid-column: 3 / 4;
-            grid-row: 4 / 5;
-        }
-
-        .chil-img2 {
-            grid-column: 1 / 2;
-            grid-row: 5 / 6;
-        }
-
-        h1 {
-            grid-column: 1 / 4;
-            grid-row: 2 / 3;
-            text-align: center;
-        }
-        
-        .chil-texto {
-
-            grid-column: 2 / 3;
-            grid-row: 3 / 6;
-
-        }
-
+        gap: 1rem;
     }
 
+    .chil-requisitos {
+
+        background-color: $color-verde;
+
+        @include dispositivos($tablet) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
+
+
+        li {
+            list-style: none;
+            text-align: center;
+            color: #EFEFEF;
+            padding: 1rem;
+        }
+    }
+
+    .chil-img1 {
+        justify-self: center;
+        @include dispositivos($tablet) {
+            grid-column: 3 / 4;
+            grid-row: 3 / 4;
+            max-width: 100%;
+        }
+    }
+
+    .chil-img2 {
+        justify-self: center;
+        @include dispositivos($tablet) {
+            grid-column: 1 / 2;
+            grid-row: 5 / 6;
+            max-width: 100%;
+        }
+    }
+
+    h1 {
+        @include dispositivos($tablet) {
+            grid-column: 1 / 4;
+            grid-row: 1 / 2;
+            text-align: center;
+        }
+    }
+    
+    .chil-texto1 {
+        @include dispositivos($tablet) {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+        }
+    }
+    .chil-texto2 {
+        @include dispositivos($tablet) {
+            grid-column: 2 / 3;
+            grid-row: 3 / 4;
+        }
+    }
+    .chil-texto3 {
+        @include dispositivos($tablet) {
+            grid-column: 2 / 3;
+            grid-row: 4 / 5;
+        }
+    }
+    .chil-texto4 {
+        @include dispositivos($tablet) {
+            grid-column: 2 / 3;
+            grid-row: 5 / 6;
+        }
+    }
 }
 
 footer {
 
+    background-color: $color-verde;
+
     div {
 
         display: grid;
-        grid-column: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        
 
         .lista-footer {
 
+            list-style: none;
+
             .titulo-footer {
 
+
+                a {            
+                    text-decoration: none;
+                }
             }
 
             .punto-footer {
 
+
+                a {            
+                    text-decoration: none;
+                    color: #373737;
+                }
             }
 
         }
 
-        .finaFooter {
-            background-color: $fondo_copyright;
-        }
-
-    }    
+    } 
+    
+    .finaFooter {
+        background-color: $fondo_copyright;
+        color: #EFEFEF;
+        text-align: center;
+        padding: 5px;
+    }
 
 }
