--- a/practica 3 grid/variables.scss
+++ b/practica 3 grid/variables.scss
@@ -1,8 +1,16 @@
+
+/* colores */
 $primario: #7abe47;
 $secundario: #ffc845;
 $negro: #000000;
 $claro: #ffffff;
 $gris: #eeeeee;
 $oscuro: #57a42b;
+
+/* espaciados */
 $padding: 1rem;
 $paddingt: 2rem;
+
+/* size screens */
+$tablet: 480px;
+$desktop: 700px;
