--- a/practica 3 grid/styles.scss
+++ b/practica 3 grid/styles.scss
@@ -33,7 +33,7 @@ header {
 
         @include desktop() {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: 30% 1fr 30%;
         }
 
         img {
@@ -49,7 +49,7 @@ header {
 
             ul {
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 
                 li {
                     list-style: none;
@@ -74,16 +74,15 @@ main {
 /* Seccion 1 */
 
 .sec1 {
+    
+    display: grid;
 
     @include desktop() {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
     }
 
     img {
-        /* se centra asi la img ¿? */
-        display: block;
         justify-self: center;
     }
 
@@ -140,8 +139,9 @@ main {
 .destacado img {
 
     @include tablet() {
-        height: 100%;
         /* dar otra propiedad a img ¿? */
+        height: 100%;
+        object-fit: cover;
     }
 
 }
